--- a/WhdxWeb/student/static/style/prepare1.2/preaudio.css
+++ b/WhdxWeb/student/static/style/prepare1.2/preaudio.css
@@ -14,7 +14,7 @@
 /***************************************章节知识点**************************************************/
 .ComSections{float: left;width: 100%;box-sizing: border-box;margin-bottom: 10px;}
 .FirstName{float: left;width: 60px;line-height: 30px;height: 100%;box-sizing: border-box;}
-.HeadList,.Com_Kownledge{float: left;box-sizing: border-box;}
+.HeadList,.Com_Kownledge{float: left;box-sizing: border-box;width: 100%;box-sizing: border-box;}
 .HeadList li{cursor: pointer; float: left;white-space:nowrap; overflow:hidden; text-overflow:ellipsis; line-height: 30px;width: 105px;padding-right: 10px;text-align: left;box-sizing: border-box;}
 @media screen and (max-width:1366px){
     .HeadList{width: 780px;}
@@ -96,7 +96,7 @@
 .Example li>span{float: left; width: 30px;line-height: 25px;height: 100%;font-size: 14px;color: #333;}
 .ExampleCon{float: right;width: 720px;box-sizing: border-box;}
 .ExampleCon p{float: left;width: 100%;font-size: 14px;line-height: 21px;word-wrap: break-word;-moz-hyphens: auto;  -ms-hyphens: auto;  -webkit-hyphens: auto;  hyphens: auto;  }
-.NoData{width: 100%;height: 450px;padding: 40px;box-sizing: border-box;line-height: 370px;}
+.NoData{width: 100%;height: 450px;padding: 40px;box-sizing: border-box;line-height: 370px;text-align: center;}
 /*单词播放器*/
 .MediaPlayer{font-family: 'microsoft yahei';position: relative; width: 800px;padding-left: 55px; box-sizing: border-box;height: 60px;clear: both; margin: 0 auto ;background: black;background: rgba(0,0,0,0.8);  }
 .MediaModel{float: left;cursor: pointer;z-index: 5; position: relative; width: 120px;height: 100%;text-align: center;font-size: 14px;text-align: center;vertical-align: middle;color: white;}
@@ -178,3 +178,5 @@
 .WrongWorder span:nth-child(3){float: left;line-height: 25px;font-size: 16px;}
 .DictateRight{float: left;width: 100%;height: 400px;margin-top: 40px;text-align: center;}
 .DictateRight>img{vertical-align: top;}
+
+.NoData img{width: 250px;}
