--- a/Resources/static/common/css/common.css
+++ b/Resources/static/common/css/common.css
@@ -92,6 +92,7 @@ body {
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.fc65 {color: #65B113 !important;}
 .dino{display:none;}
 .fl{float: left}
 .fr{float: right}
@@ -131,8 +132,8 @@ body {
 }
 .lh40{line-height: 40px !important;}
 .mt30{margin-top: 30px !important;}
-.i_slcico0{height:20px;width:20px;background-position:-696px -106px;cursor: pointer;float: left;margin-right: 10px;}
-.i_slcico1{height:20px;width:20px;background-position:-699px -137px;cursor: pointer;float: left;margin-right: 10px;}
+.i_slcico0{height:20px;width:21px;background-position:-695px -106px;cursor: pointer;float: left;margin-right: 10px;}
+.i_slcico1{height:20px;width:21px;background-position:-698px -137px;cursor: pointer;float: left;margin-right: 10px;}
 .i_slcico2{height:24px;width:24px;background-position:-697px -170px;cursor: pointer;float: left;margin-right: 10px;}
 img{vertical-align: middle;max-width: 100%;}
 .bd1 {border: 1px solid #ccc;}
@@ -170,7 +171,7 @@ img{vertical-align: middle;max-width: 100%;}
 /*弹出框*/
 .Shade{width: 102%;overflow: auto;top: 0; height: 100%;display: none; position: fixed;z-index: 18; background: black;background: rgba(0,0,0,0.5);}
 .c_Dissolve{width: 355px;height: 120px;border-radius: 10px;z-index: 19999;display: none; position: fixed;bottom: 0;top:0;left: 0;right: 0;margin: auto; line-height: 120px;color: white; text-align: center;font-size: 24px;background: black;background: rgba(0,0,0,0.5);}
-.c_SearchC{width: 102%;z-index: 999; overflow: auto;top: 0; height: 100%;display: none; position: fixed; background: black;background: rgba(0,0,0,0.5);}
+.c_SearchC{width: 102%;z-index: 999; overflow: auto;top: 0; height: 100%; position: fixed; background: black;background: rgba(0,0,0,0.5);}
 .c_CopyBtn{width: 150px;float: right;cursor: pointer; height: 45px;font-size: 18px; background: #65B113;margin: 35px 20px 0 0; border-radius: 10px;text-align: center;line-height: 50px;color: white; box-sizing: border-box;outline: none;border: 0;}
 .c_closeimg0{float: left;position: absolute;top: 20px;right: 20px;cursor: pointer;}
 .c_classCopy{position:absolute;top:350px;left:480px;font-size: 30px;color: orange;}
